syntax = "proto3";
import "FrameDefineMessage.proto";

package KFMsg;

// 协议号区间 : 1-1000
enum FrameClientProtocol
 {
	MSG_FRAME_CLIENT_BEGIN 				= 0;	// pb3 需要0

	// display
	MSG_RESULT_DISPLAY 					= 1;	// 错误码显示
	MSG_COMMAND_REQ 					= 2;	// 客户端发送GM指令请求
	MSG_TELL_NOTICE						= 3;	// 小红点提示

	// login
	MSG_LOGIN_REQ 						= 100;	// 客户端登录验证请求
	MSG_LOGIN_ACK 						= 101;	// 客户端登录验证结果
	MSG_LOGOUT_REQ 						= 102;	// 客户端请求登出游戏
	MSG_LOGOUT_ACK 						= 103;	// 客户端请求登出游戏
	MSG_TELL_BE_KICK 					= 104;	// 被踢下线了

	// data
 	MSG_SYNC_UPDATE_DATA 				= 201;	// 同步更新属性
	MSG_SYNC_ADD_DATA 					= 202;	// 同步增加属性
	MSG_SYNC_REMOVE_DATA 				= 203;	// 同步删除属性
	MSG_REMOVE_DATA_REQ 				= 204;	// 请求删除属性
	MSG_QUERY_PLAYER_REQ 				= 205;	// 查询玩家数据
	MSG_QUERY_PLAYER_ACK 				= 206;	// 查询玩家数据
	MSG_QUERY_BASIC_REQ					= 207;	// 查询玩家基本数据
	MSG_QUERY_BASIC_ACK					= 208;	// 查询基础数据
	MSG_SHOW_ELEMENT 					= 209;	// 显示奖励
	MSG_REQUEST_SYNC_REQ				= 210;	// 客户端请求同步
	MSG_CANCEL_SYNC_REQ					= 211;	// 客户端取消同步

	// attribute
	MSG_SET_NAME_REQ 					= 300;	// 设置名字
	MSG_SET_SEX_REQ 					= 301;	// 设置性别
	MSG_ACHIEVE_REWARD_REQ				= 302;	// 领取成就奖励
	MSG_TASK_REWARD_REQ 				= 303;	// 领取任务奖励
	MSG_ACTIVITY_REWARD_REQ 			= 304;	// 领取活动奖励
	MSG_COMPOUND_REQ					= 305;	// 属性合成请求
	MSG_SEVEN_SIGNIN_REWARD_REQ			= 307;	// 领取7天签到奖励

	// item
	MSG_SPLIT_ITEM_REQ					= 401;	// 拆分道具( 把一堆堆叠物品拆分成2个 )
	MSG_MERGE_ITEM_REQ					= 402;	// 合并道具( 把2个堆叠物品合并成一个 )
	MSG_USE_ITEM_REQ					= 403;	// 使用道具
	MSG_MOVE_ITEM_REQ					= 404;	// 移动物品(从背包到仓库 或者从仓库到背包)
	MSG_EXCHANGE_ITEM_REQ				= 405;	// 交换物品(从背包到仓库 或者从仓库到背包)
	MSG_CLEAN_ITEM_REQ					= 406;	// 移动某个包裹
	MSG_SORT_ITEM_REQ					= 407;	// 整理背包
	MSG_REMOVE_ITEM_REQ					= 408;	// 删除道具
	MSG_MOVE_ALL_ITEM_REQ				= 409;	// 移动所有道具

	MSG_USE_ITEM_TO_HERO_REQ			= 451;	// 对英雄使用道具

	// mail
	MSG_VIEW_MAIL_REQ 					= 501;	// 查看邮件
	MSG_DELETE_MAIL_REQ 				= 502;	// 删除邮件
	MSG_QUERY_MAIL_REQ 					= 503;	// 请求查询邮件
	MSG_MAIL_REWARD_REQ 				= 504;	// 领取邮件奖励

	// store
	MSG_BUY_STORE_REQ 					= 511;	// 购买商品请求
	MSG_QUERY_STORE_REQ 				= 512;	// 请求商城信息
	MSG_QUERY_STORE_ACK 				= 513;	// 请求商城信息反馈

	// pay
	MSG_APPLY_PAY_ORDER_REQ 			= 531;	// 请求订单
	MSG_APPLY_PAY_ORDER_ACK 			= 532;	// 请求订单
	MSG_PAY_RESULT_REQ					= 533;	// 充值结果
	MSG_QUERY_PAY_REQ					= 534;	// 查询充值

	// relation
	MSG_ADD_RELATION_REQ 				= 551;	// 申请添加关系
	MSG_DEL_RELATION_REQ				= 552;	// 申请删除关系
	MSG_REPLY_RELATION_INVITE_REQ 		= 553;	// 回复关系申请
	MSG_SET_REFUSE_RELATION_INVITE_REQ 	= 554;	// 设置拒绝添加好友

	
	// rank
	MSG_QUERY_RANK_LIST_REQ 			= 571;	// 查询全服排行榜
	MSG_QUERY_RANK_LIST_ACK	 			= 572;	// 查询排行榜反馈
	MSG_QUERY_FRIEND_RANK_LIST_REQ 		= 573;	// 查询好友排行榜
	MSG_QUERY_FRIEND_RANK_LIST_ACK		= 574;	// 查询好友排行榜
 }
//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
// 错误码提示
// MSG_RESULT_DISPLAY
message MsgResultDisplay
{
	uint32 result = 1;
	repeated bytes param = 2;
}

// 小红点提示
// MSG_TELL_NOTICE
message MsgTellNotice
{
	repeated PBNotice notice = 1;
}

// 客户端发送GM指令请求
// MSG_COMMAND_REQ
message MsgCommandReq
{
	bytes command = 1;				// 命令
	repeated bytes params = 2;		// 参数列表
}
//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
// 登录请求
// MSG_LOGIN_REQ
message MsgLoginReq
{
	bytes token = 1;		// token
	uint64 accountid = 2;	// 账号id
	bytes version = 3;		// 客户端版本号
}

// 通知进入游戏世界
// MSG_LOGIN_ACK
message MsgLoginAck
{
	uint64 playerid = 1;
	PBObject playerdata = 2;
	uint64 servertime = 3;
}

// 登出游戏
// MSG_LOGOUT_REQ
message MsgLogoutReq
{

}

// 登出游戏
// MSG_LOGOUT_ACK
message MsgLogoutAck
{

}

// 通知被踢下线
// MSG_TELL_BE_KICK
message MsgTellBeKick
{
	uint32 type = 1;
}

//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

// 所有的游戏属性同通过这3个消息来完成同步
// MSG_SYNC_UPDATE_DATA
message MsgSyncUpdateData
{
	PBObject pbdata = 1;	
}

// MSG_SYNC_ADD_DATA
message MsgSyncAddData
{
	PBObject pbdata = 1;	
}

// MSG_SYNC_REMOVE_DATA
message MsgSyncRemoveData
{
	PBObject pbdata = 1;	
}

// 显示奖励的物品
// MSG_SHOW_ELEMENT
message MsgShowElement
{
	PBShowElement element = 1;	// 奖励数据
}

// 删除属性
// MSG_REMOVE_DATA_REQ
message MsgRemoveDataReq
{
	bytes dataname = 1;		// 属性名称
	uint64 key = 2;			// id
}

// 请求同步属性
// MSG_REQUEST_SYNC_REQ
message MsgRequestSyncReq
{
	bytes dataname = 1;
}

// 取消同步属性
// MSG_CANCEL_SYNC_REQ
message MsgCancelSyncReq
{
	bytes dataname = 1;
}
////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////
// 查询玩家
// MSG_QUERY_BASIC_REQ
message MsgQueryBasicReq
{
	bytes name = 1;
}

// 玩家基础信息
// MSG_QUERY_BASIC_ACK
message MsgQueryBasicAck
{
	PBObject player = 1;	
}

// 查询其他玩家数据，不能查询自己的数据
// MSG_QUERY_PLAYER_REQ
message MsgQueryPlayerReq
{
	uint64 playerid = 1;
}

// 查询玩家信息
// MSG_QUERY_PLAYER_ACK
message MsgQueryPlayerAck
{
	PBObject player = 1;
}
////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////
// 设置名字
// MSG_SET_NAME_REQ
message MsgSetNameReq
{
	bytes name = 1;
}

// 设置性别
// MSG_SET_SEX_REQ
message MsgSetSexReq
{
	uint32 sex = 1;
}
////////////////////////////////////////////////////////////////////
// 合成属性
// MSG_COMPOUND_REQ
message MsgCompoundReq
{
	uint32 id = 1;	// 合成id
}
////////////////////////////////////////////////////////////////////

// 领取成就奖励
// MSG_ACHIEVE_REWARD_REQ
message MsgAchieveRewardReq
{
	uint32 id = 1;
}

// 领取任务奖励
// MSG_TASK_REWARD_REQ
message MsgTaskRewardReq
{
	uint32 id = 1;
}

// 领取活动奖励
// MSG_ACTIVITY_REWARD_REQ
message MsgActivityRewardReq
{
	uint32 type = 1;	// 活动类型
	uint32 id = 2;		// 活动子id
}

// 领取7天签到奖励
// MSG_SEVEN_SIGNIN_REWARD_REQ
message MsgSevenSignInRewardReq
{
	uint32 day = 1;		// 第几天的奖励( 根据角色属性singin的sevenday的天数, 和sevenreward奖励标记来判断 )
}

////////////////////////////////////////////////////////////////////
// 拆分道具( 把一堆堆叠物品拆分成2个 )
// MSG_SPLIT_ITEM_REQ
message MsgSplitItemReq
{
	bytes sourcename = 1;	// 源背包名字
	uint64 sourceuuid = 2;	// 道具uuid
	uint32 sourcecount = 3;	// 移动数量
	bytes targetname = 4;	// 目标背包名字
	uint32 targetindex = 5;	// 目标背包位置( 0 表示服务器自己找空位置 )
}

// 合并道具( 把2个堆叠物品合并成一个 )
// MSG_MERGE_ITEM_REQ
message MsgMergeItemReq
{
	bytes sourcename = 1;	// 源背包名字
	uint64 sourceuuid = 2;	// 道具uuid
	bytes targetname = 3;	// 目标背包名字
	uint64 targetuuid = 4;	// 合并的目标道具
}

// 移动物品(从背包到仓库 或者从仓库到背包)
// MSG_MOVE_ITEM_REQ
message MsgMoveItemReq
{
	bytes sourcename = 1;	// 源背包名字
	uint64 sourceuuid = 2;	// 道具uuid
	bytes targetname = 3;	// 目标背包名字
	uint32 targetindex = 4;	// 目标背包位置( 0 表示服务器自己找空位置 )
	bool showclient = 5;	// 客户端需要显示
}

// 移动所有道具到包裹
// MSG_MOVE_ALL_ITEM_REQ
message MsgMoveAllItemReq
{
	bytes sourcename = 1;	// 源背包名字
	bytes targetname = 2;	// 目标背包名字
	bool showclient = 3;	// 客户端需要显示
}

// 交换物品(从背包到仓库 或者从仓库到背包)
// MSG_EXCHANGE_ITEM_REQ
message MsgExchangeItemReq
{
	bytes sourcename = 1;	// 源背包名字
	uint64 sourceuuid = 2;	// 道具uuid
	bytes targetname = 3;	// 目标背包名字
	uint64 targetuuid = 4;	// 目标uuid
}

// 清空某个包裹
// MSG_CLEAN_ITEM_REQ
message MsgCleanItemReq
{
	bytes sourcename = 1;	// 源背包名字
}

// 整理背包
// MSG_SORT_ITEM_REQ
message MsgSortItemReq
{
	bytes sourcename = 1;	// 源背包名字
}

// 删除道具
// MSG_REMOVE_ITEM_REQ
message MsgRemoveItemReq
{
	bytes sourcename = 1;	// 源背包名字
	uint64 uuid = 2;		// 道具uuid( 为0时候, 删除背包所有道具 )
}

// 使用道具
// MSG_USE_ITEM_REQ
message MsgUseItemReq
{
	bytes name = 1;	// 背包名字
	uint64 uuid = 2;
}

// 对英雄使用道具
// MSG_USE_ITEM_TO_HERO_REQ
message MsgUseItemToHeroReq
{
	bytes name = 1;		// 背包名字
	uint64 itemuuid = 2; 	// 道具uuid
	uint64 herouuid = 3;	// 英雄uuid
}
////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////
// 查看邮件
// MSG_VIEW_MAIL_REQ
message MsgViewMailReq
{
	uint64 id = 1;
}

// 删除邮件
// MSG_DELETE_MAIL_REQ
message MsgDeleteMailReq
{
	uint64 id =1;	// 邮件id
}

// 查询邮件
// MSG_QUERY_MAIL_REQ
message MsgQueryMailReq
{

}

// 领取邮件奖励
// MSG_MAIL_REWARD_REQ
message MsgMailRewardReq
{
	uint64 id = 1;
}
////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////
// 客户端请求购买物品
//	MSG_BUY_STORE_REQ;
message MsgBuyStoreReq
{
	bytes version = 1;		// 版本号
	bytes buytype = 2;		// 使用什么购买
	uint32 id = 3;			// 商品id
	uint32 count = 4;		// 购买数量
}

// 请求商城信息
// MSG_QUERY_STORE_REQ
message MsgQueryStoreReq
{
	bytes version = 1;		// 版本号
}

// 请求商城信息反馈
// MSG_QUERY_STORE_ACK
message MsgQueryStoreAck
{
	bytes version = 1;		// 版本号
	bytes data = 2;			// 商城数据( 保存成xml, 然后自己解析文件 )
}
////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////
// 请求生成订单
// MSG_APPLY_PAY_ORDER_REQ 
message MsgApplyPayOrderReq
{
	string payid = 1;	// 充值id
}

// 生成订单回复
// MSG_APPLY_PAY_ORDER_ACK
message MsgApplyPayOrderAck
{
	string payid = 1;	// 充值id
	string order = 2;	// 订单号( 传给充值平台作为参数 )
}

// 通知充值结果
// MSG_PAY_RESULT_REQ
message MsgPayResultReq
{
	string payid = 1;	// 充值id
	string order = 2;	// 订单号
	bool result = 3;	// 结果
}

// 请求充值查询
// MSG_QUERY_PAY_REQ
message MsgQueryPayReq
{
	
}
////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////
// 查询全服排行榜
// MSG_QUERY_RANK_LIST_REQ	
message MsgQueryRankListReq
{
	uint32 rankid = 1;
}

// 查询排行榜反馈
// MSG_QUERY_RANK_LIST_ACK
message MsgQueryRankListAck
{
	uint32 rankid = 1;			// 排行榜id
	PBRankDatas rankdatas = 2;	// 榜单数据
}

// 查询好友排行榜
// MSG_QUERY_FRIEND_RANK_LIST_REQ
message MsgQueryFriendRankListReq
{
	uint32 rankid = 1;
}

// 查询好友排行榜反馈
// MSG_QUERY_FRIEND_RANK_LIST_ACK
message MsgQueryFriendRankListAck
{
	uint32 rankid = 1;			// 排行榜id
	PBRankDatas rankdatas = 2;	// 榜单数据
}
////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////
// 申请添加关系
// MSG_ADD_RELATION_REQ
message MsgAddRelationReq
{
	bytes dataname = 1;		// 属性名
	bytes playername = 2;	// 玩家名字
	uint64 playerid = 3;	// 玩家id
	bytes message = 4;		// 留言
}

// 删除关系
// MSG_DEL_RELATION_REQ
message MsgDelRelationReq
{
	bytes dataname = 1;		// 属性名
	uint64 playerid = 2;	// 玩家id
}

// 回复添加好友请求
// MSG_REPLY_RELATION_INVITE_REQ
message MsgReplyRelationInviteReq
{
	bytes dataname = 1;		// 申请列表属性名
	uint64 playerid = 2;	// 玩家id 0 表示所有
	uint32 operate = 3;		// 1=同意 2=拒绝 3=直接删除请求 
}

// 设置拒绝添加好友
// MSG_SET_REFUSE_RELATION_INVITE_REQ
message MsgSetRefuseRelationInviteReq
{
	bytes dataname = 1;		// 申请列表属性名
	uint32 refuse = 2;	 // 1=拒绝申请 0=同意接受
}
////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////
