syntax = "proto3";
import "FrameDefineMessage.proto";

package KFMsg;

enum FrameServerProtocol
{	
	S2S_FRAME_SERVER_PROTOCOL_BEGIN 			= 0;		// pb3 0 开始

	// zone
	S2S_UPDATE_ZONE_TO_LOGIN_REQ 				= 20001;	// 更新小区到login服务器
	S2S_ADD_GATE_TO_WORLD_REQ					= 20002;	// 更新gate到world服务器
	S2S_REMOVE_GATE_TO_WORLD_REQ				= 20003;	// 更新gate到world服务器

	// login	
	S2S_LOGIN_TO_LOGIN_REQ						= 20101;	// 登录请求到login服务器
	S2S_LOGIN_TO_GATE_ACK						= 20102;	// 登录回应到gate服务器
	S2S_LOGIN_TO_WORLD_REQ						= 20103;	// 登录请求到world服务器
	S2S_LOGIN_TO_LOGIN_ACK						= 20104;	// 登录回应到login服务器
	S2S_LOGIN_TO_GAME_REQ						= 20105;	// 登录请求到game服务器
	S2S_LOGOUT_TO_GAME_REQ						= 20106;	// 登出游戏到game服务器
	S2S_DISCONNECT_TO_GAME_REQ					= 20107;	// 断线到game服务器
	S2S_LEAVE_TO_GAME_REQ						= 20108;	// 离开到game服务器
	S2S_ENTER_TO_GATE_ACK						= 20109;	// 进入游戏到gate服务器
	S2S_RELOGIN_TO_GAME_REQ						= 20110;	// 重新登录到game
	S2S_RELOGIN_TO_GATE_ACK						= 20111;	// 重新登录到gate
	S2S_CONNECT_TO_GAME_REQ						= 20112;	// 连接到game服务器


	// world
	S2S_PLAYER_ENTER_TO_WORLD_REQ 				= 20202;	// 游戏玩家进入游戏
	S2S_PLAYER_LEAVE_TO_WORLD_REQ 				= 20203;	// 游戏玩家离开游戏
	S2S_KICK_PLAYER_TO_GAME_REQ					= 20204;	// 踢人请求到game服务器
	S2S_KICK_PLAYER_TO_GATE_REQ					= 20205;	// 踢人请求到gate服务器
	S2S_KICK_PLAYER_TO_WORLD_REQ				= 20206;	// 踢人请求到world服务器
	S2S_KICK_PLAYER_TO_WORLD_ACK				= 20207;	// 踢人请求到world服务器

	// server
	S2S_BROADCAST_TO_GAME_REQ 					= 20301;	// 广播消息
	S2S_BROADCAST_TO_GAME_ACK 					= 20302;	// 广播消息
	S2S_BROADCAST_TO_WORLD_REQ					= 20303;	// 广播消息
	S2S_BROADCAST_TO_WORLD_ACK					= 20304;	// 广播消息
	S2S_BROADCAST_TO_GATE_REQ					= 20305;	// 广播消息
	
	// data
	S2S_LOAD_PLAYER_TO_DATA_REQ					= 20401;	// 加载玩家数据
	S2S_LOAD_PLAYER_TO_GAME_ACK					= 20402;	// 加载玩家数据
	S2S_SAVE_PLAYER_TO_DATA_REQ					= 20403;	// 保存玩家数据
	S2S_SAVE_PLAYER_TO_GAME_ACK					= 20404;	// 保存玩家
	S2S_QUERY_PLAYER_TO_DATA_REQ				= 20405;	// 查询玩家
	S2S_QUERY_PLAYER_TO_GAME_ACK				= 20406;	// 查询玩家
	S2S_SET_PLAYERNAME_TO_DATA_REQ 				= 20407;	// 设置玩家名字
	S2S_SET_PLAYERNAME_TO_GAME_ACK				= 20408;	// 设置玩家名字

	// mail
	S2S_NEW_PLAYER_MAIL_REQ 					= 20501;	// 新玩家登陆邮件服务
	S2S_QUERY_MAIL_REQ 							= 20502;	// 查询邮件
	S2S_QUERY_MAIL_ACK 							= 20503;	// 查询邮件
	S2S_ADD_MAIL_REQ 							= 20504;	// 添加邮件
	S2S_NOTICE_NEW_MAIL_REQ 					= 20505;	// 通知新邮件
	S2S_UPDATE_MAIL_STATUS_REQ 					= 20506;	// 设置邮件状态请求
	S2S_UPDATE_MAIL_STATUS_ACK 					= 20507;	// 设置邮件状态响应
	
	// rank
	S2S_NOTICE_RANK_WORKER_REQ					= 20601;	// 通知排行榜worker
	S2S_SYNC_REFRESH_RANK						= 20602;	// 刷新排行榜
	S2S_UPDATE_RANK_DATA_REQ 					= 20603;	// 更新排行榜数据
	S2S_QUERY_RANK_LIST_REQ 					= 20604;	// 查询全服排行榜
	S2S_QUERY_FRIEND_RANK_LIST_REQ 				= 20605;	// 查询好友排行榜

	// public
	S2S_UPDATE_DATA_TO_PUBLIC_REQ 				= 20701;	// 更新公共数据
	S2S_QUERY_BASIC_TO_PUBLIC_REQ 				= 20702;	// 查询玩家基础数据
	S2S_QUERY_BASIC_TO_GAME_ACK 				= 20703;	// 查询玩家基础数据
	S2S_CLEAR_ONLINE_TO_PUBLIC_REQ				= 20704;	// 清除在线信息

	// relation
	S2S_UPDATE_DATA_TO_RELATION_REQ 			= 20801;	// 更新关系属性
	S2S_QUERY_RELATION_TO_RELATION_REQ 			= 20802;	// 查询关系信息
	S2S_QUERY_RELATION_TO_GAME_ACK 				= 20803;	// 查询关系信息
	S2S_QUERY_RELATION_INVITE_TO_RELATION_REQ 	= 20804;	// 查询关系申请信息
	S2S_QUERY_RELATION_INVITE_TO_GAME_ACK 		= 20805;	// 查询关系申请信息

	S2S_APPLY_ADD_RELATION_TO_RELATION_REQ 		= 20806;	// 申请添加关系请求
	S2S_APPLY_ADD_RELATION_TO_GAME_ACK 			= 20807;	// 申请添加关系请求
	S2S_DEL_RELATION_INVITE_TO_RELATION_REQ		= 20808;	// 删除关系邀请
	S2S_ADD_RELATION_TO_RELATION_REQ 			= 20809;	// 添加关系请求
	S2S_ADD_RELATION_TO_GAME_ACK 				= 20810;	// 添加关系回应
	S2S_DEL_RELATION_TO_RELATION_REQ 			= 20811;	// 删除关系请求
	S2S_DEL_RELATION_TO_GAME_ACK 				= 20812;	// 删除关系回应
	S2S_UPDATE_FRIENDLINESS_TO_RELATION_REQ	 	= 20813;	// 更新好友度
	S2S_UPDATE_FRIENDLINESS_TO_GAME_ACK 		= 20814;	// 更新好友度反馈
	
	
}

///////////////////////////////////////////////////////////////////
message PBZoneData
{
	uint64 appid = 1;	// appid
	bytes ip = 2;		// ip
	uint32 port = 3;	// port
	uint32 count = 4;	// 当前在线人数
}

// 更新小区到login服务器
// S2S_UPDATE_ZONE_TO_LOGIN_REQ
message S2SUpdateZoneToLoginReq
{
	PBZoneData zonedata = 1;
}

// 添加gate到world服务器
// S2S_ADD_GATE_TO_WORLD_REQ
message S2SAddGateToWorldReq
{
	uint64 gameid = 1;
	repeated uint64 gateid = 2;
}

// 删除gate到world服务器
// S2S_REMOVE_GATE_TO_WORLD_REQ
message S2SRemoveGateToWorldReq
{
	uint64 gameid = 1;
	uint64 gateid = 2;
}
/////////////////////////////////////////////////////////////////
// 登录验证请求
// S2S_LOGIN_TO_LOGIN_REQ
message S2SLoginToLoginReq
{
	bytes ip = 1;			// 登录ip
	bytes token = 2;		// token
	uint64 accountid = 3;	// 账号id
	uint64 sessionid = 4;	// sessionid
}

// S2S_LOGIN_TO_GATE_ACK
message S2SLoginToGateAck
{
	uint32 result = 1;		// 结果
	uint64 accountid = 2;	// 账号id
	uint64 sessionid = 3;	// sessionid
	uint64 bantime = 4;		// 禁止游戏的时间
}

// 登录请求到world服务器
// S2S_LOGIN_TO_WORLD_REQ
message S2SLoginToWorldReq
{
	PBLoginData pblogin = 1;
}

// 登录失败到login服务器
// S2S_LOGIN_TO_LOGIN_ACK
message S2SLoginToLoginAck
{
	uint32 result = 1;		// 结果
	uint64 gateid = 2;		// 服务器id
	uint64 accountid = 3;	// 账号id
	uint64 sessionid = 4;	// sessionid
}

// 登录请求到game服务器
// S2S_LOGIN_TO_GAME_REQ
message S2SLoginToGameReq
{
	PBLoginData pblogin = 1;
}

// S2S_ENTER_TO_GATE_ACK
message S2SEnterToGateAck
{
	PBLoginData pblogin = 1;
	PBObject playerdata = 2;
	uint64 servertime = 3;
}

// 请求登出到game服务器
// S2S_LOGOUT_TO_GAME_REQ
message S2SLogoutToGameReq
{
	uint64 playerid = 1; 
}

// 玩家断线到game服务器
// S2S_DISCONNECT_TO_GAME_REQ
message S2SDisconnectToGameReq
{
	uint64 playerid = 1; 
}

// 玩家离开到game服务器
// S2S_LEAVE_TO_GAME_REQ
message S2SLeaveToGameReq
{
	uint64 playerid = 1; 
}

// 连接到game服务器
// S2S_CONNECT_TO_GAME_REQ
message S2SConnectToGameReq
{
	repeated PBLoginData pblogin = 1;	
}

// 重新登录到game
// S2S_RELOGIN_TO_GAME_REQ
message S2SReLoginToGameReq
{
	bytes token = 1;
	uint64 playerid = 2; 
	uint64 sessionid = 3;
	uint64 accountid = 4;
}

// 重新登录到gate
// S2S_RELOGIN_TO_GATE_ACK
message S2SReLoginToGateAck
{
	bytes token = 1;
	uint64 playerid = 2; 
	uint64 sessionid = 3;
	uint64 accountid = 4;
}
/////////////////////////////////////////////////////////////////////
/////////////////////////////////////////////////////////////////////
// 加载玩家数据
// S2S_LOAD_PLAYER_TO_DATA_REQ
message S2SLoadPlayerToDataReq
{
	PBLoginData pblogin = 1;	
}

// 加载游戏数据结果
// S2S_LOAD_PLAYER_TO_GAME_ACK
message S2SLoadPlayerToGameAck
{
	uint32 result = 1;
	PBLoginData pblogin = 2;
	PBObject playerdata = 3;	
}

// 保存玩家数据
// S2S_SAVE_PLAYER_TO_DATA_REQ
message S2SSavePlayerToDataReq
{
	uint64 id = 1;
	uint32 flag = 2;
	PBObject data = 3;
}

// 保存玩家数据
// S2S_SAVE_PLAYER_TO_GAME_ACK
message S2SSavePlayerToGameAck
{
	uint64 id = 1;
}

// 查询属性
// S2S_QUERY_PLAYER_TO_DATA_REQ
message S2SQueryPlayerToDataReq
{
	uint64 playerid = 1;
}

// 查询属性
// S2S_QUERY_PLAYER_TO_GAME_ACK
message S2SQueryPlayerToGameAck
{
	uint32 result = 1;
	PBObject playerdata = 2;
}

// S2S_SET_PLAYERNAME_TO_DATA_REQ
message S2SSetPlayerNameToDataReq
{
	uint64 playerid = 1;
	bytes oldname = 2;
	bytes newname = 3;
	bytes costdata = 4;
}

// S2S_SET_PLAYERNAME_TO_GAME_ACK
message S2SSetPlayerNameToGameAck
{
	uint32 result = 1;
	uint64 playerid = 2;
	bytes name = 3;
	bytes costdata = 4;
}
/////////////////////////////////////////////////////////////////////
/////////////////////////////////////////////////////////////////////
// 玩家进入游戏世界
// S2S_PLAYER_ENTER_TO_WORLD_REQ
message S2SPlayerEnterToWorldReq
{
	uint64 playerid = 1;		// 角色id	
}

// 玩家离开游戏世界
// S2S_PLAYER_LEAVE_TO_WORLD_REQ
message S2SPlayerLeaveToWorldReq
{
	uint64 playerid = 1;		// 角色id
}

////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////
// 踢人请求到game服务器
// S2S_KICK_PLAYER_TO_WORLD_REQ
message S2SKickPlayerToWorldReq
{
	uint32 type = 1;		// 踢人类型
	uint64 playerid = 2;	// 角色id
	uint64 gameid = 3;		// 服务器id
}


// 踢人请求到game服务器
// S2S_KICK_PLAYER_TO_GAME_REQ
message S2SKickPlayerToGameReq
{
	uint32 type = 1;		// 踢人类型
	uint64 playerid = 2;	// 角色id
}

// 踢人请求到gate服务器
// S2S_KICK_PLAYER_TO_GATE_REQ
message S2SKickPlayerToGateReq
{
	uint32 type = 1;		// 踢人类型
	uint64 playerid = 2;	// 角色id
}

// S2S_KICK_PLAYER_TO_WORLD_ACK
message S2SKickPlayerToWorldAck
{
	uint64 playerid = 2;	// 角色id
}
////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////
// S2S_BROADCAST_TO_GAME_REQ
message S2SBroadcastToGameReq
{
	uint32 msgid = 1;		// 消息id
	bytes msgdata = 2;		// 消息内容
}

// S2S_BROADCAST_TO_GAME_ACK
message S2SBroadcastToGameAck
{
	uint32 msgid = 1;		// 消息id
	bytes msgdata = 2;		// 消息内容
	uint32 serial = 3;		// 序列号
	uint64 worldid = 4;		// worldid
}

// S2S_BROADCAST_TO_GATE_REQ
message S2SBroadcastToGateReq
{
	uint32 msgid = 1;		// 消息id
	bytes msgdata = 2;		// 消息内容
	uint32 serial = 3;		// 序列号
	uint64 worldid = 4;		// worldid
}

// S2S_BROADCAST_TO_WORLD_REQ
message S2SBroadcastToWorldReq
{
	uint32 msgid = 1;		// 消息id
	bytes msgdata = 2;		// 消息内容
}

// S2S_BROADCAST_TO_WORLD_ACK
message S2SBroadcastToWorldAck
{
	uint32 msgid = 1;		// 消息id
	bytes msgdata = 2;		// 消息内容
	uint32 serial = 3;		// 序列号
	uint64 worldid = 4;		// worldid
}
////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////
// 邮件信息
message PBMail
{
	map<string, bytes> data = 1;
}

// 查询邮件请求
// S2S_QUERY_MAIL_REQ
message S2SQueryMailReq
{
	uint64 playerid = 1;		//  角色id
	uint32 zoneid = 2;			//  小区id
	uint64 maxid = 3;			//  最大的邮件id
}

// 查询邮件请求
// S2S_QUERY_MAIL_ACK
message S2SQueryMailAck
{
	uint64 playerid = 1;		// 角色id
	repeated PBMail mail = 2;	// 邮件信息
}

// 添加邮件
// S2S_ADD_MAIL_REQ
message S2SAddMailReq
{
	uint32 flag = 1;
	uint64 objectid = 2;		// id
	PBMail pbmail = 3;			// 邮件信息
}

// 通知有新邮件
// S2S_NOTICE_NEW_MAIL_REQ
message S2SNoticeNewMailReq
{
	uint64 playerid = 1;	// 角色id	
}

// 新玩家登陆邮件服务
// S2S_NEW_PLAYER_MAIL_REQ
message S2SNewPlayerMailReq
{
	uint64 playerid = 1;		// 玩家id
	uint32 zoneid = 2;			// 小区id
}

// 设置邮件状态请求
// S2S_UPDATE_MAIL_STATUS_REQ
message S2SUpdateMailStatusReq
{
	uint64 playerid = 1;
	uint64 id = 2;
	uint32 flag = 3;
	uint32 status = 4;
}

// 设置邮件状态响应
// S2S_UPDATE_MAIL_STATUS_ACK
message S2SUpdateMailStatusAck
{
	uint64 playerid = 1;
	uint64 id = 2;
	uint32 status = 3;
}

/////////////////////////////////////////////////////////////
/////////////////////////////////////////////////////////////
/////////////////////////////////////////////////////////////
// 通知rank worker
// S2S_NOTICE_RANK_WORKER_REQ
message S2SNoticeRankWorkerReq
{
	uint32 workerid = 1;
}

// 刷新排行榜完成
// S2S_SYNC_REFRESH_RANK
message S2SSyncRefreshRank
{
	uint32 rankid = 1;				// 榜单id
}

// 更新排行榜数据
// S2S_UPDATE_RANK_DATA_REQ
message S2SUpdateRankDataReq
{
	uint64 playerid = 1;		// 玩家id
	uint32 rankid = 2;			// 榜单id
	uint32 zoneid = 3;			// 小区id
	PBRankData pbrankdata = 4;	// 排行榜数据
}

// 查询全服排行榜
// S2S_QUERY_RANK_LIST_REQ
message S2SQueryRankListReq
{
	uint32 rankid = 1;			// 排行榜id
	uint32 zoneid = 2;			// 小区id
}

// 查询好友排行榜
// S2S_QUERY_FRIEND_RANK_LIST_REQ
message S2SQueryFriendRankListReq
{
	uint32 rankid = 1;				// 榜单类型
	repeated uint64 friendid = 2;	// 待查询的玩家好友id
}



//////////////////////////////////////////////////////////////
//////////////////////////////////////////////////////////////
//////////////////////////////////////////////////////////////
// 更新公共数据
// S2S_UPDATE_DATA_TO_PUBLIC_REQ
message S2SUpdateDataToPublicReq
{
	map<string, bytes> pbdata = 1;	// 属性
}

// 清除在线逻辑
// S2S_CLEAR_ONLINE_TO_PUBLIC_REQ
message S2SClearOnlineToPublicReq
{
	uint64 serverid = 1;
}

// 查询基础数据
// S2S_QUERY_BASIC_TO_PUBLIC_REQ
message S2SQueryBasicToPublicReq
{
	bytes name = 1;
}

// 查询基础数据
// S2S_QUERY_BASIC_TO_GAME_ACK
message S2SQueryBasicToGameAck
{
	bytes name = 1;
	uint32 result = 2;
	map<string, bytes> pbdata = 3;	// 属性
}
///////////////////////////////////////////////////////////////
///////////////////////////////////////////////////////////////
///////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////
message PBRelation
{
	uint64 playerid = 1;
	map<string, bytes> playerdata = 2;
	map<string, bytes> relationdata = 3;
}

// 查询好友信息
// S2S_QUERY_RELATION_TO_RELATION_REQ
message S2SQueryRelationToRelationReq
{
	bytes dataname = 1;
	uint64 playerid = 2;	// 玩家id
}

// 查询好友信息
// S2S_QUERY_RELATION_TO_GAME_ACK
message S2SQueryRelationToGameAck
{
	bytes dataname = 1;
	uint64 playerid = 2;				// 玩家id
	repeated PBRelation pbrelation = 3;	// 关系数据	
}

// 查询好友申请信息
// S2S_QUERY_RELATION_INVITE_TO_RELATION_REQ
message S2SQueryRelationInviteToRelationReq
{
	bytes dataname = 1;
	uint64 playerid = 3;	// 玩家id
}

// 查询好友信息
// S2S_QUERY_RELATION_INVITE_TO_GAME_ACK
message S2SQueryRelationInviteToGameAck
{
	bytes dataname = 1;
	uint64 playerid = 2;				// 玩家id
	repeated PBRelation pbinvite = 3;	// 邀请数据	
}

// 更新好友属性
// S2S_UPDATE_DATA_TO_RELATION_REQ
message S2SUpdateDataToRelationReq
{
	bytes dataname = 1;
	uint64 playerid = 2;
	map<string, bytes> pbdata = 3;
}

// 添加好友请求
// S2S_APPLY_ADD_RELATION_TO_RELATION_REQ
message S2SApplyAddRelationToRelationReq
{
	bytes dataname = 1;		// 属性名
	bytes playername = 2;	// 对方名字
	uint64 playerid = 3;	// 对方id
	bytes message = 4;		// 留言	
}

// 添加好友申请
// S2S_APPLY_ADD_RELATION_TO_GAME_ACK
message S2SApplyAddRelationToGameAck
{
	bytes dataname = 1;			// 属性名
	uint64 playerid = 2;		// 玩家id
	PBRelation pbinvite = 3;	// 好友数据	
}

// 删除好友请求
// S2S_DEL_RELATION_INVITE_TO_RELATION_REQ
message S2SDelRelationInviteToRelationReq
{
	bytes dataname = 1;			// 属性名
	bytes listname = 2;			// 列表名
	uint64 selfplayerid = 3;	// 申请id
	uint64 targetplayerid = 4;	// 对方id
}

// 添加关系
// S2S_ADD_RELATION_TO_RELATION_REQ
message S2SAddRelationToRelationReq
{
	bytes dataname = 1;		// 属性名
	uint64 playerid = 2;	// 对方id
	bytes playername = 3;	// 对方名字
}

// 添加关系
// S2S_ADD_RELATION_TO_GAME_ACK
message S2SAddRelationToGameAck
{
	bytes dataname = 1;			// 属性名
	uint64 playerid = 2;		// 玩家id
	PBRelation pbrelation = 4;	// 关系信息
}

// 删除关系请求
// S2S_DEL_RELATION_TO_RELATION_REQ
message S2SDelRelationToRelationReq
{
	bytes dataname = 1;
	uint64 playerid = 2;	// 关系id
}

// 删除关系
// S2S_DEL_RELATION_TO_GAME_ACK
message S2SDelRelationToGameAck
{
	bytes dataname = 1;
	uint64 playerid = 2;	// 申请id
	uint64 relationid = 3;	// 对方id
}

// 更新好友度
// S2S_UPDATE_FRIENDLINESS_TO_RELATION_REQ
message S2SUpdateFriendLinessToRelationReq
{
	uint32 type = 1;			// 类型
	uint64 selfplayerid = 2;	// 申请id
	uint64 targetplayerid = 3;	// 对方id
	uint32 friendliness = 4;	// 好友度
}

// 更新好友度反馈
// S2S_UPDATE_FRIENDLINESS_TO_GAME_ACK
message S2SUpdateFriendLinessToGameAck
{
	uint64 playerid = 1;		// 申请id
	uint64 targetplayerid = 2;	// 对方id
	uint32 friendliness = 3;	// 好友度
}
